# prompt-mining

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
demos/: 01_training_classifiers.ipynb  02_on_the_fly_classification.ipynb  03_evaluator_analysis.ipynb  04_activation_visualization.ipynb  05_shortcut_taxonomy_analysis.ipynb
demos/gradio_app/: classifier_app_config.yaml  classifier_l27_sae.joblib  gradio_classifier_app.py
docs/: ATTRIBUTION.md
prompt_mining/: types.py
prompt_mining/analysis/: __init__.py  attention_inspector.py  base.py  comparison.py  data_structures.py  directions.py  disk_cache.py  sae_feature_interpreter.py  unsupervised.py  utilities.py
prompt_mining/classifiers/: README.md  __init__.py  base_classifier.py  dann.py  dataset.py  feature_selection.py  lodo.py  lpm_classifier.py  sklearn_classifiers.py  threshold_strategy.py
prompt_mining/core/: __init__.py  compact_graph.py  evaluator.py  prompt_spec.py  run_data.py
prompt_mining/datasets/: __init__.py  advbench_dataset.py  base.py  bipia_dataset.py  deepset_dataset.py  dolly15k_dataset.py  enron_dataset.py  gandalf_summarization_dataset.py  harmbench_dataset.py  hf_dataset.py  injecagent_dataset.py  jayavibhav_dataset.py  llmail_dataset.py  mosscap_dataset.py  openorca_dataset.py  prompts_ranked_dataset.py  qualifire_dataset.py  safeguard_dataset.py  softage_dataset.py  wildjailbreak_dataset.py  yanismiraoui_dataset.py
prompt_mining/evaluators/: __init__.py  injecagent_evaluator.py  llama_guard_evaluator.py  llama_judge_evaluator.py  prompt_guard_evaluator.py
(+33 files in other folders)
