[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-mining"
version = "0.1.0"
description = "Activation Capture and Mechanistic Interpretability Platform"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Research Team"}
]

dependencies = [
    "torch>=2.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polars>=0.18.0",
    "zarr>=2.16.0",
    "pyarrow>=12.0.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.57.3",
    "transformer-lens>=2.16.1",
    "sae-lens>=6.22.3",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=14.2.0",
    "xgboost>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
]

s3 = [
    "fsspec>=2023.6.0",
    "s3fs>=2023.6.0",
    "boto3>=1.28.0",
]

circuit-tracer = [
    "circuit-tracer",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["prompt_mining*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
